# io-algos

./: .gitignore  ChangeLog.md  README.md  cabal.project  doctests.hs  io-algos.cabal  stack.yaml
.github/workflows/: cabal.yml
app/: Main.hs
bench/: SortedVec.hs  Static.hs  VEBBaseline.hs
src/: BinarySearch.hs  Cola.hs  FC.hs  Lib.hs  Merge.hs  MergeSort.hs  VEBLayout.hs  VEBTree.hs  VTree.hs
src/Data/: VEBLayout.hs
src/Data/BinaryTree/: LeafTree.hs
src/Data/BinaryTree/LeafTree/: Complete.hs  Core.hs  Embedded.hs
src/Data/VEB/: Map.hs  Tree.hs
test/Data/VEB/: TreeSpec.hs
