cabal-version: 1.12
name:           io-algos
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/noinia/io-algos>
homepage:       https://github.com/noinia/io-algos
bug-reports:    https://github.com/noinia/io-algos/issues
author:         Frank Staals
maintainer:     frank@fstaals.net
copyright:      2019 Frank Staals
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/noinia/io-algos

library
  exposed-modules:
                  -- Lib
                  BinarySearch
                  Data.VEBLayout
                  Data.BinaryTree.LeafTree
                  Data.BinaryTree.LeafTree.Embedded
                  Data.BinaryTree.LeafTree.Core
                  Data.BinaryTree.LeafTree.Complete
  other-modules:

  hs-source-dirs:
      src
  build-depends:
                  base                    >=4.7 && <5
                , containers              >= 0.6
                , deepseq                 >= 1.4.4.0
                -- , dlist                   >= 0.8
                -- , hgeometry-combinatorial >= 0.11.0.0
                , mtl                     >= 2.2.2
                , primitive               >= 0.6.4.0
                , random                  >= 1.1
                , semigroupoids           >= 5.3.5
                -- , streamly                >= 0.6.1
                , unpacked-maybe          >= 0.1.0.0
                , vector                  >= 0.12
                , integer-logarithms      >= 1.0
              -- , integer-gmp            >= 1.0.2.0

                -- , tasty-bench >= 0.2.2

  default-language: Haskell2010
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , KindSignatures
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric
                    , ViewPatterns
                    , PatternSynonyms
                    , TupleSections
                    , RankNTypes
                    , ConstraintKinds
                    , DataKinds
                    , FlexibleInstances


executable io-algos-exe
  main-is: Main.hs
  other-modules:
      Paths_io_algos
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , io-algos
  default-language: Haskell2010

test-suite io-algos-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_io_algos
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , io-algos
  default-language: Haskell2010

benchmark io-algo-bench

  hs-source-dirs: bench

  main-is: Static.hs
  type: exitcode-stdio-1.0

  other-modules: VEBBaseline
               , SortedVec
  build-depends:
                base                    >=4.7 && <5
              , io-algos
              , criterion               >= 1.5.9
              -- , tasty-bench             >= 0.2
              , random                  >= 1.2
              , vector
              , deepseq
              , mtl
              , containers
              -- , hgeometry-combinatorial

  ghc-options: -Wall -O2 -rtsopts -fno-warn-unticked-promoted-constructors

  default-language: Haskell2010
  default-extensions: LambdaCase
                    , FlexibleContexts
                    , KindSignatures
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , ViewPatterns
                    , PatternSynonyms
                    , TupleSections
                    , RankNTypes
                    , ConstraintKinds
                    , DataKinds
                    , FlexibleInstances
                    , DeriveGeneric
